--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Basic</title>
 </head>
-<body>
-  <script src="main.js"></script>
+<body>  
+  <h1>Travelworthy!</h1>
+  <div id="message">Welcome to our site</div> 
+   <script>
+    let  message =
+    [
+      'signup to get ours newsletter for 10% off!'
+    ],[
+      'Get a 100% off the price. YES WE ARE CRAZ',
+    ];
+    function updateMessage() {
+      var el = document.getElementById('message');
+      el.textContent = message;
+    }
+    updateMessage();
+  </script>
 </body>
 </html>
